[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "thatdslibrary"
version = "0.1.0"
description = "A useful package for EDA and quick ML model finetuning"
readme = "README.md"
authors = [
    {name = "Quan Tran", email = "anhquan0412@gmail.com"}
]
homepage = "https://github.com/anhquan0412/that_ds_library"
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/anhquan0412/that_ds_library"

[project.dependencies]
numpy = ">=1.23.0"
scikit-learn = ">=1.2.0"
matplotlib = ">=3.7.0"
pandas = ">=1.5.0"
plotly = ">=5.14.0"
dtreeviz = ">=2.2"
graphviz = ">=0.2"
seaborn = ">=0.12.0"
statsmodels = ">=0.13.0"
pingouin = ">=0.5.3"

[project.optional-dependencies]

[tool.poetry.dependencies]
python = "^3.6"
